--- a/index.Rmd
+++ b/index.Rmd
@@ -1,5 +1,8 @@
 ---
-title: "Speed and Distance"
+title: "Untitled"
+author: "Omer Sharif"
+date: "7/3/2021"
+output: html_document
 ---
 
 ```{r setup, include=FALSE}
